<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar">

    </include>

    <RelativeLayout
        android:layout_width="298dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/input_login_reg"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:hint="@string/prompt_login"-->
<!--            android:inputType="text" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_username"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_login_reg"
                />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/input_pass_reg"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/input_email_reg"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:inputType="textPassword"-->
<!--            android:hint="@string/prompt_password" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TIL_email"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/input_pass_reg"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TIL_username"
            android:hint="@string/prompt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_email_reg"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_reg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_login_reg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_reg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TIL_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/midnightGreen"
            android:text="@string/action_signup"
            app:cornerRadius="30dp">

        </com.google.android.material.button.MaterialButton>


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>